--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,13 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   font: inherit;
   vertical-align: baseline;
 }
-html{
-  font-size: 50px;
+body {
+  font-family: 'Helvetica Neue',Helvetica,sans-serif;
+  font-size: 17px;
+  line-height: 21px;
+  color: #000;
+  background-color: #efeff4;
+  -webkit-overflow-scrolling: touch;
 }
 ul{
   list-style: none;
@@ -15,7 +20,7 @@ ul{
 .head{
   position: absolute;
   width: 100%;
-  height: 16.533333rem;
+  height: 12.38rem;
   overflow: auto;
 }
 .footer-nav {
@@ -29,8 +34,8 @@ ul{
   left: 0;
   right: 0;
   padding: .2rem 0rem 0;
-  border-top: 1px solid #e5e5e5;
-  border-top: 1px solid rgba(0,0,0,0.08);
+  border-top: .02rem solid #e5e5e5;
+  border-top: .02rem solid rgba(0,0,0,0.08);
   z-index: 999;
 }
 .footer-nav ul{
@@ -43,12 +48,12 @@ ul{
   text-align: center;
 }
 .footer-nav ul i {
-  width: 21px;
-  height: 21px;
+  width: .42rem;
+  height: .42rem;
   margin: 0 auto;
   background-size: 100% 100%;
   position: relative;
 }
 .footer-nav ul p {
-  font-size: 12px;
+  font-size: .24rem;
 }
