--- a/src/App.css
+++ b/src/App.css
@@ -95,7 +95,7 @@ ul {
 .head {
   position: absolute;
   width: 100%;
-  height: 12.38rem;
+  /* height: 12.38rem; */
   overflow: auto;
 }
 .footer-nav {
