--- a/src/pages/Home/Top.css
+++ b/src/pages/Home/Top.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  height: 6.5%;
+  height: 0.88rem;
   background-color: #d33d3c;
   z-index: 9999999999;
 }
