--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -3,6 +3,25 @@
   width: 100vw;
   overflow: hidden;
 }
+/* 遮盖 */
+.cover {
+  /* width: 100vw;
+  height: 100vh; */
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 999999999999999;
+  background-color: #f5f5f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cover img {
+  width: 20%;
+}
 /* 轮播图样式 */
 .ant-carousel .slick-slide {
   text-align: center;
@@ -66,25 +85,25 @@
   background-position: 0 0;
 }
 .menu-list ul li:nth-child(2) .icon-culture {
-  background-position: -41px 0;
+  background-position: -0.82rem 0;
 }
 .menu-list ul li:nth-child(3) .icon-culture {
-  background-position: -83px 0;
+  background-position: -1.66rem 0;
 }
 .menu-list ul li:nth-child(4) .icon-culture {
-  background-position: -124px 0;
+  background-position: -2.48rem 0;
 }
 .menu-list ul li:nth-child(5) .icon-culture {
-  background-position: -166px 0;
+  background-position: -3.32rem 0;
 }
 .menu-list ul li:nth-child(6) .icon-culture {
-  background-position: -207px 0;
+  background-position: -4.14rem 0;
 }
 .menu-list ul li:nth-child(7) .icon-culture {
-  background-position: -248px 0;
+  background-position: -4.96rem 0;
 }
 .menu-list ul li:nth-child(8) .icon-culture {
-  background-position: -290px 0;
+  background-position: -5.8rem 0;
 }
 /* 主要区 */
 .mid-recommend {
@@ -157,20 +176,21 @@
 .wrap {
   position: relative;
   margin-bottom: 0.22rem;
-  overflow: hidden;
-  height: 4.28rem;
+  overflow-x: auto;
+  height: 4.7rem;
 }
 .yuan-bot .wrap ul {
   font-size: 0.2rem;
   overflow-x: auto;
+  overflow-y: hidden;
 }
 .yuan-bot li:first-child {
   margin-left: 0.3rem;
 }
 .wrap ul li {
   float: left;
-  width: 2.6rem;
-  height: 3.98rem;
+  width: 3rem;
+  height: 4.7rem;
   margin: 0 0.1rem 0 0;
   padding: 0;
   cursor: pointer;
@@ -220,7 +240,7 @@
 }
 .yuan-bot ul li p {
   margin: 0.2rem 0 0.1rem 0.15rem;
-  font-size: 0.3rem;
+  font-size: 0.28rem;
   color: #333;
   text-align: left;
 }
@@ -229,6 +249,7 @@
   color: #999999;
 }
 .yuan-bot ul li p b {
+  display: block;
   font-size: 12px;
   color: #999999;
   text-decoration: line-through;
@@ -320,7 +341,7 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-.bottom {
+.bottom_price {
   margin-top: -0.04rem;
   line-height: 0.55rem;
   padding-bottom: 0.04rem;
