--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,85 @@
-html, body, div, span,input, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+html,
+body,
+div,
+span,
+input,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -8,8 +89,9 @@ html, body, div, span,input, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, 
 }
 html {
   font-size: 13.34vw;
+}
 body {
-  font-family: 'Helvetica Neue',Helvetica,sans-serif;
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
   font-size: 17px;
   line-height: 21px;
   color: #000;
@@ -35,9 +117,9 @@ ul {
   bottom: 0;
   left: 0;
   right: 0;
-  padding: .2rem 0rem 0;
-  border-top: .02rem solid #e5e5e5;
-  border-top: .02rem solid rgba(0,0,0,0.08);
+  padding: 0.2rem 0rem 0;
+  border-top: 0.02rem solid #e5e5e5;
+  border-top: 0.02rem solid rgba(0, 0, 0, 0.08);
   z-index: 9;
 }
 .footer-nav ul {
@@ -50,14 +132,14 @@ ul {
   text-align: center;
 }
 .footer-nav ul i {
-  width: .42rem;
-  height: .42rem;
+  width: 0.42rem;
+  height: 0.42rem;
   margin: 0 auto;
   background-size: 100% 100%;
   position: relative;
 }
 .footer-nav ul p {
-  font-size: .24rem;
+  font-size: 0.24rem;
 }
 ::-webkit-scrollbar {
   display: none;
